# lib/api-spec/openapi.yaml
@@ -4856,6 +4856,8 @@ components:
           type: integer
         customerName:
           type: ["string", "null"]
+        customerEmail:
+          type: ["string", "null"]
         occurrenceDate:
           type: string
         dueDate:
@@ -4909,6 +4911,8 @@ components:
           type: number
         channel:
           type: string
+        recipient:
+          type: ["string", "null"]
         subject:
           type: string
         message:
@@ -4938,7 +4942,9 @@ components:
       properties:
         generated:
           type: integer
-      required: [generated]
+        delivery:
+          type: string
+      required: [generated, delivery]
 
     Item:
       type: object
